--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 
         <section class="carrossel-mascara">
             <div class="carrossel-container slide">
-                <a href="teclado1.html"><img src="/CSS/imagens/keyboard1.jpg"/></a>
-                <a href="teclado2.html"><img src="/CSS/imagens/keyboard2.jpg"/></a>
-                <a href="teclado3.html"><img src="/CSS/imagens/keyboard3.jpg"/></a>
-                <a href="teclado4.html"><img src="/CSS/imagens/keyboard4.jpg"/></a>
-                <a href="teclado5.html"><img src="/CSS/imagens/keyboard5.jpg"/></a>
+                <a href="teclado1.html"><img src="CSS/imagens/keyboard1.jpg"/></a>
+                <a href="teclado2.html"><img src="CSS/imagens/keyboard2.jpg"/></a>
+                <a href="teclado3.html"><img src="CSS/imagens/keyboard3.jpg"/></a>
+                <a href="teclado4.html"><img src="CSS/imagens/keyboard4.jpg"/></a>
+                <a href="teclado5.html"><img src="CSS/imagens/keyboard5.jpg"/></a>
             </div>
         </section>
         
