concertando caminhos quebrados

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="cabecalhoPagina">
             
             <!--!Barra de pesquisa-->
-            <a href="index.html"><img src="/CSS/imagens/logo.png" class="logoLoja"></a>
+            <a href="index.html"><img src="CSS/imagens/logo.png" class="logoLoja"></a>
             <div class="barraPesquisa">
                 <table border class="pesquisaCabecalho">
                     <td><input type="text" class="pesquisaInput" placeholder="Pesquisa" ></td>
