--- a/montador.html
+++ b/montador.html
@@ -12,7 +12,7 @@
         <div class="cabecalhoPagina">
             
             <!--!Barra de pesquisa-->
-            <a href="index.html"><img src="/CSS/imagens/logo.png" class="logoLoja"></a>
+            <a href="index.html"><img src="CSS/imagens/logo.png" class="logoLoja"></a>
             <div class="barraPesquisa">
                 <table border class="pesquisaCabecalho">
                     <td><input type="text" class="pesquisaInput" placeholder="Pesquisa" ></td>
@@ -32,16 +32,16 @@
                         <ul>
                             <li><a href="#"><i class="fi-rr-menu-burger"></i> Teclados</i></a>
                                 <ul>
-                                    <li><a href="#"><img src="/CSS/imagens/005-keyboard-3.png" id="imgMenu"> Teclados <i class="fi-rr-angle-small-right"></i></a>
+                                    <li><a href="#"><img src="CSS/imagens/005-keyboard-3.png" id="imgMenu"> Teclados <i class="fi-rr-angle-small-right"></i></a>
                                         <ul>
                                             <li><a href="#">Teclado 100%</a></li>
                                             <li><a href="#">Teclado 80%</a></li>
                                             <li><a href="#">Teclado 60%</a></li>
                                             <li><a href="#">Teclado 40%</a></li>
                                         </ul>
-                                    <li><a href="#"><img src="/CSS/imagens/001-keyboard.png" id="imgMenu"> Keycaps</a>
+                                    <li><a href="#"><img src="CSS/imagens/001-keyboard.png" id="imgMenu"> Keycaps</a>
                                     <li><a href="#"><img src="CSS/imagens/004-keyboard-2.png" id="imgMenu"> Switches</a>
-                                    <li><a href="#"><img src="/CSS/imagens/003-pcb.png" id="imgMenu"> PCBs</a>
+                                    <li><a href="#"><img src="CSS/imagens/003-pcb.png" id="imgMenu"> PCBs</a>
                                 </ul>
                             <li><a href="montador.html"><i class="fi-rr-settings"></i> Monte seu teclado</i></a>
                             <li><a href="#"><i class="fi-rr-megaphone"></i> Contato</i></a>        
